# oracle

angular/oracle/: README.md  angular.json  package-lock.json  package.json  proxy.config.json
angular/oracle/src/: index.html
angular/oracle/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  interceptor.ts  login.service.ts
angular/oracle/src/app/add-device/: add-device.component.html  add-device.component.ts
angular/oracle/src/app/devices/: devices.component.html  devices.component.ts
angular/oracle/src/app/log/: log.component.html  log.component.ts
angular/oracle/src/app/login/: login.component.html  login.component.scss  login.component.ts
angular/oracle/src/app/settings/: settings.component.html  settings.component.ts
angular/oracle/src/app/since/: since.component.html  since.component.spec.ts  since.component.ts
npm/: app.riot  index.html  index.js  package-lock.json  package.json  settings.riot  webpack.config.js
oracle/: Cargo.toml
oracle/data/: config.ron  devices.ron
oracle/src/: devices.rs  log.rs  main.rs  monitor.rs  notifier.rs  ping.rs  state.rs  webserver.rs
